--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 script:
 - npm run test
 before_install:
+- openssl version
 - openssl enc -aes-256-cbc -d -salt -in env.encoded -out .env -k ${ENV_PASS}
 deploy:
 - provider: s3
