Waiting for MongoDB to start.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ os: linux
 dist: xenial
 services:
 - mongodb
+before_script:
+  - sleep 15
+  - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
 script:
 - npm run test
 before_install:
