Specified the region of the S3 bucket

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 # encode with:
 #  export ENV_PASS=yOuR_PasS
 #  openssl enc -e -aes-256-cbc -md md5 -salt -pass env:ENV_PASS -in .env -out env.encoded
+# see https://askubuntu.com/questions/1067762/unable-to-decrypt-text-files-with-openssl-on-ubuntu-18-04
 - openssl aes-256-cbc -d -pass pass:${ENV_PASS} -in env.encoded -out .env
 deploy:
 - provider: s3
@@ -21,6 +22,7 @@ deploy:
   on: 
     repo: valworbli/apitestdeploy
   bucket: $S3_DEV_API_BUCKET_NAME
+  region: us-west-2
 - provider: codedeploy
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
