--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node worbli-api.js",
     "dev": "DEBUG=snapshotimporter:* nodemon --legacy-watch --inspect=0.0.0.0:9229 --nolazy worbli-api.js",
     "import": "node import-snapshot.js",
-    "test": "npm run lint && mocha --timeout 3000 --exit src/v3/tests/*.js",
+    "test": "npm run lint && mocha --exit src/v3/tests/*.js",
     "lint": "eslint --ignore-path .gitignore --fix ."
   },
   "repository": {
@@ -42,6 +42,8 @@
     "joi": "^14.0.4",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "node-fetch": "^2.2.1",
     "npm": "^6.4.1",
     "unirest": "^0.6.0",
@@ -50,12 +52,12 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
-    "eslint": "^5.10.0",
+    "eslint": "^5.15.3",
     "eslint-config-google": "^0.11.0",
     "http-status": "^1.3.1",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
-    "supertest": "^3.3.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "supertest": "^3.3.0"
   }
 }
