The country specific info is inserted in the DB now, before running the tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ os: linux
 dist: xenial
 services:
 - mongodb
+before_script:
+  - sleep 15
+  - mongoimport --jsonArray --db worbli --collection identity_documents --file documents.json
 script:
 - npm run test
 before_install:
