--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,6 @@ deploy:
   region: us-west-2
   wait_until_deployed: true
 before_deploy:
-- zip -rq latest *
+- shopt -s dotglob && zip -rq latest *
 - mkdir -p dpl_cd_upload
 - mv latest.zip dpl_cd_upload/latest.zip
-
