--- a/appspec.yml
+++ b/appspec.yml
@@ -4,13 +4,13 @@ os: linux
 
 files:
   - source: ./
-    destination: /usr/src/app
+    destination: /home/ubuntu/portal/portalBackEnd/
 
 hooks:
-  # BeforeInstall:
-  #   - location: scripts/stop_docker.sh
-  #     timeout: 30
-  #     runas: root
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 30
+      runas: root
   # AfterInstall:
   #   - location: scripts/change_permissions.sh
   #     timeout: 300
