--- a/appspec.yml
+++ b/appspec.yml
@@ -11,15 +11,15 @@ hooks:
     - location: scripts/before_install.sh
       timeout: 30
       runas: root
-  # AfterInstall:
-  #   - location: scripts/change_permissions.sh
-  #     timeout: 300
-  #     runas: root
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 30
+      runas: root
   ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 30
-      runas: root
+      runas: ubuntu
   ApplicationStop:
     - location: scripts/application_stop.sh
-      timeout: 300
+      timeout: 30
       runas: root
